temp index shorter

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <img src="graphics/texture.png" class="bgImg1" alt="backgound texture">
     <img src="graphics/profile.png" class="bgImg2" alt="profile">
-    <div class="bgImg3"></div>
+    <!--<div class="bgImg3"></div>-->
 
     <!-- MENU NAVIGATION -->
     <nav id="nav-bar">
